[gd_scene load_steps=9 format=3 uid="uid://cu5nt5lp11ppp"]

[ext_resource type="Script" path="res://gamemap/deck_create_scene.gd" id="1_6o0my"]
[ext_resource type="Texture2D" uid="uid://qmdux3g3wi65" path="res://resource/image/mapimage/deckcreation_background.png" id="2_hvb8i"]
[ext_resource type="Texture2D" uid="uid://bbt8dm57rthwg" path="res://resource/image/mapimage/enptyslot.png" id="3_8n55w"]
[ext_resource type="PackedScene" uid="uid://bdutau7fea8r0" path="res://gamemap/enpty_slot_controller.tscn" id="4_3wlur"]
[ext_resource type="FontFile" uid="uid://sshyf2b4qqgp" path="res://resource/fonts/MSYHSB.TTC" id="5_er8fo"]
[ext_resource type="AudioStream" uid="uid://chso6552bm30t" path="res://resource/Sound/Jonah Senzel - Cardplay.mp3" id="6_c856l"]

[sub_resource type="LabelSettings" id="LabelSettings_djhpx"]
font = ExtResource("5_er8fo")
font_size = 56
font_color = Color(0.00784314, 0.00784314, 0.00784314, 1)
shadow_size = 6
shadow_color = Color(0.239216, 0.239216, 0.239216, 0.592157)

[sub_resource type="LabelSettings" id="LabelSettings_cp6fd"]
font = ExtResource("5_er8fo")
font_size = 26
font_color = Color(0.517647, 0.376471, 1, 1)
shadow_size = 6
shadow_color = Color(0.239216, 0.239216, 0.239216, 0.592157)

[node name="DeckCreateScene" type="Node2D"]
script = ExtResource("1_6o0my")
metadata/_edit_vertical_guides_ = [466.0, 590.0, 719.0, 841.0, 966.0, 1088.0]
metadata/_edit_horizontal_guides_ = [355.0, 505.0, 536.0, 585.0]

[node name="background_image" type="Sprite2D" parent="."]
position = Vector2(804, 451)
texture = ExtResource("2_hvb8i")
metadata/_edit_lock_ = true

[node name="Pending_cardslot 1" type="ColorRect" parent="."]
offset_left = 470.0
offset_top = 356.0
offset_right = 590.0
offset_bottom = 506.0

[node name="Sprite2D" type="Sprite2D" parent="Pending_cardslot 1"]
position = Vector2(58, 74)
scale = Vector2(0.316496, 0.362864)
texture = ExtResource("3_8n55w")

[node name="emptyslot1" parent="Pending_cardslot 1" instance=ExtResource("4_3wlur")]

[node name="Pending_cardslot 2" type="ColorRect" parent="."]
offset_left = 722.0
offset_top = 355.0
offset_right = 842.0
offset_bottom = 505.0

[node name="Sprite2D" type="Sprite2D" parent="Pending_cardslot 2"]
position = Vector2(58.5625, 74.625)
scale = Vector2(0.314258, 0.365898)
texture = ExtResource("3_8n55w")

[node name="emptyslot2" parent="Pending_cardslot 2" instance=ExtResource("4_3wlur")]

[node name="Pending_cardslot 3" type="ColorRect" parent="."]
offset_left = 969.0
offset_top = 357.0
offset_right = 1089.0
offset_bottom = 507.0

[node name="Sprite2D" type="Sprite2D" parent="Pending_cardslot 3"]
position = Vector2(58, 74)
scale = Vector2(0.316496, 0.362864)
texture = ExtResource("3_8n55w")

[node name="emptyslot3" parent="Pending_cardslot 3" instance=ExtResource("4_3wlur")]

[node name="ButtonSelect 1" type="Button" parent="."]
offset_left = 465.0
offset_top = 535.0
offset_right = 591.0
offset_bottom = 586.0
text = "选择"

[node name="ButtonSelect 2" type="Button" parent="."]
offset_left = 718.0
offset_top = 535.0
offset_right = 842.0
offset_bottom = 586.0
text = "选择"

[node name="ButtonSelect 3" type="Button" parent="."]
offset_left = 965.0
offset_top = 535.0
offset_right = 1089.0
offset_bottom = 586.0
text = "选择"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 99.0
offset_top = 79.0
offset_right = 299.0
offset_bottom = 872.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
size_flags_stretch_ratio = 1.86
theme_override_constants/separation = 5
alignment = 1

[node name="infoLabel" type="Label" parent="."]
offset_left = 429.0
offset_top = 207.0
offset_right = 1101.0
offset_bottom = 286.0
text = "选择一张牌以加入你的牌组"
label_settings = SubResource("LabelSettings_djhpx")

[node name="infoLabel2" type="Label" parent="."]
offset_left = 86.0
offset_top = 28.0
offset_right = 344.0
offset_bottom = 67.0
scale = Vector2(1, 1.01123)
text = "牌组中的卡牌：0张"
label_settings = SubResource("LabelSettings_cp6fd")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 664.0
offset_top = 372.0
offset_right = 904.0
offset_bottom = 486.0
text = "开始战斗"

[node name="BGMPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_c856l")

[connection signal="pressed" from="ButtonSelect 1" to="." method="_on_button_select_1_pressed"]
[connection signal="pressed" from="ButtonSelect 2" to="." method="_on_button_select_2_pressed"]
[connection signal="pressed" from="ButtonSelect 3" to="." method="_on_button_select_3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
